# summarizer-app

./: Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: controller.py  model.py  view.py
summarizer/: controller.py  model.py  view.py
tests/: test_model.py  text_to_summarize.txt
