[project]
name = "summarizer"
version = "0.1.0"
description = "A NiceGUI-based web app for text summarization using Hugging Face and the MVC design pattern."
authors = [
    { name = "Azim Givron", email = "azimgivron@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["huggingface", "nicegui", "text summarization", "AI", "MVC"]
classifiers = [
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/azimgivron/summarizer-app.git"
Repository = "https://github.com/azimgivron/summarizer-app.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["summarizer"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.pytest.ini_options]
pythonpath = ["."]
